--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsnd --respawn src/server.ts",
     "build": "tsc",
     "lint": "eslint src --ignore-path .eslintignore --ext .js,.ts",
     "lint:fix": "npx eslint src --fix",
@@ -29,6 +30,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   }
 }
